# xfep-xml

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xfep/xml/: __init__.py  builder.py  namespaces.py  utils.py
src/xfep/xml/templates/: credit_note.xml.j2  debit_note.xml.j2  dispatch.xml.j2  invoice.xml.j2  summary.xml.j2  voided.xml.j2
tests/: conftest.py  test_builder.py  test_invoice_xml.py  test_notes_xml.py  test_voided_xml.py
