[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfep-xml"
version = "0.1.0"
description = "Generación de XML UBL 2.1 para Facturación Electrónica Perú"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.0",
    "jinja2>=3.1",
    "xfep-models>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/xfep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
